♻️: toList 메소드 사용 정리